<resources>
    <string name="app_name">Mafqoud</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>

    <!-- fragments names-->
    <string name="gallery">Gallery</string>
    <string name="missing">Missing</string>
    <string name="suspects">Suspects</string>
    <string name="title_activity_navigation_drawer">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_help" translatable="false">HelpActivity</string>

    <!-- Facebook sign in -->
    <string name="facebook_app_id" translatable="false">208120906357108</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb208120906357108</string>

    <!--Log in strings -->
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget your Password?</string>
    <string name="new_user"> New User? </string>
    <string name="sign_up"> Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="sign_up_with">Sign Up with</string>
    <string name="sign_in_with">Sign In with</string>
    <string name="email_already_used">This email is already used.</string>
    <string name="email_verification_message_body">We have send you a verification link please check it.</string>
    <string name="email_verification_message_title">Email verification.</string>
    <string name="email_verification_message_button">OK</string>
    <string name="password_valid">Password must contains minimum 8 characters</string>
    <string name="vaild_email">Please Inter Valid Email</string>
    <string name="valid_username_characters">Username contains only a-z, A-z, 1-9 and underscore</string>
    <string name="usernamr_valid">Minimum username 4 characters</string>
    <string name="required">Required.</string>
    <string name="register_dialog">Registering User...</string>
    <string name="sign_in_dialog">Singing In...</string>
    <string name="resend_email">Resend Email</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="sign_in_failed">Sign In failed</string>
    <string name="send_Email_success">Send Email  Success</string>
    <string name="send_email_failed">Send Email  Failed</string>
    <string name="cancel">Cancel</string>
    <string name="conncetion_failed">Connection Failed.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="enter_email_here">Enter your Email Here</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_button">Reset</string>
    <string name="title_activity_report_missing" translatable="false">ReportMissing</string>

    <!--Report Missing First step strings -->
    <string name="name_text">Name :</string>
    <string name="name_hint">Enter Full Name..</string>
    <string name="age_text">Age :</string>
    <string name="age_hint">Enter Age..</string>
    <string name="gender_text">Gender :</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <!-- Report Missing Second step Strings -->

    <string name="location_text">Location :</string>
    <string name="location_hint">Last Seen Location..</string>
    <string name="more_info_text">More info :</string>
    <string name="more_info_hint">More info on the missing.. </string>
    <string name="contact_info_text">Contact Info :</string>
    <string name="contact_info_hint">Enter Contact info</string>

    <!--Report Missing third step strings-->
    <string name="description">Please upload a photo of him or her.</string>
    <string name="step3_notes">Note: Photo shouldn\'t contain more than one face.</string>

    <!--Report Details activity strings-->
    <string name="report_details_activity_label">Report Details</string>
    <string name="report_details_name">Name : </string>
    <string name="report_details_age">Age : </string>
    <string name="report_details_gender">Gender : </string>
    <string name="report_details_location">Location : </string>
    <string name="report_details_contatct_info">Contact Info : </string>
    <string name="report_details_more_info">More Info : </string>
    <string name="report_details_unknown_field">N/A</string>
    <string name="report_details_unknown_more_info">There is no Info.</string>

    <!-- help activity -->
    <string name="help_massege">If you lost your dear ones don`t worry,</string>
    <string name="how_to_use_app">just upload the photo and few details of the person and our powerful face recognition API will find out the person
    if the person is already in our database or we will notify you once the person is found.</string>
    <string name="help_suspect">If you find someone and think that s/he is the missing person,</string>
    <string name="help_upload">you can upload the photo on Mafqoud so that you can reunite the missing person to his/her dear ones.</string>
    <string name="help_better_result">For better results</string>
    <string name="first_result">1. take image from some distance</string>
    <string name="second_result">2. there shouldn\'t be more then one face in the image </string>
    <string name="how_use_mafqoud">How use Mafqoud App ?</string>

    <!--Gallery_fragment_strings-->
    <string name="gallery_fragment_switch_suspects_text">Suspects</string>
    <string name="gallery_fragment_switch_missing_text">Missing</string>

    <!--User Galleries(fragment_missing and fragment_suspect) strings-->
    <string name="user_gallery_item_name">Name :</string>
    <string name="user_gallery_item_age">Age :</string>
    <string name="user_gallery_item_gender">Gender :</string>

    <!-- CopyRight -->
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <!-- about us -->
    <string name="about_us_description">This is an Android app to Identify Missing People using face detection and recognition techniques
        That is done by allow Users to report their Missing and users who volunteer to provide us with pictures and information
        of people that they suspect they are the ones we are looking for such as: lost children, mentally disabled, fugitives
        or even abducted. through their account.
        If the any of the Missing Reports matches with any of the Suspect Reports then both of the user are notified.</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="no_reports_available">No Reports Available</string>
    <string name="you_don_have_any_notification_now">You don\'t have any Notification Now</string>
    <string name="sign_up_s">Sign Up</string>
    <string name="sign_in_s">Sign In</string>
    <string name="gallery_is_empty">Gallery Is Empty</string>
    <string name="no_reports_availablee">No Reports Available</string>
    <string name="start_to_add_new_one_by_click_on_button">Start to add new one by click on + button</string>
    <string name="start_to_add_new_one_by_click_on_buttonn">Start to add new one by click on + button</string>

</resources>
