<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.project.graduation.welcomeback.Home.ReportDetailsActivity"
    tools:showIn="@layout/activity_report_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/report_details_name"
            style="@style/ReportDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/report_details_name"

            />

        <TextView
            android:id="@+id/report_details_age"
            style="@style/ReportDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/report_details_age" />

        <TextView
            android:id="@+id/report_details_gender"
            style="@style/ReportDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/report_details_gender" />

        <TextView
            android:id="@+id/report_details_location"
            style="@style/ReportDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/report_details_location"

            />

        <TextView
            android:id="@+id/report_details_contact_info"
            style="@style/ReportDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/report_details_contatct_info"

            />

        <TextView
            android:id="@+id/report_details_more_info"
            style="@style/ReportDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/report_details_more_info"

            />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>