<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/suspect_step3_image"
        android:layout_width="@dimen/fragment_third_step_image_width_height"
        android:layout_height="@dimen/fragment_third_step_image_width_height"
        android:src="@android:drawable/ic_menu_upload"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/help_better_result"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/first_result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/second_result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>