<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <!-- TODO : ADD SCROLLVIEW -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- First Row -->

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_first_step_marginLeft"
            android:layout_marginTop="@dimen/fragment_first_step_name_marginTop"
            android:text="@string/name_text"
            android:textSize="@dimen/fragment_first_step_gender_textSize"/>

        <EditText
            android:id="@+id/missing_step1_name_editText"
            android:layout_width="@dimen/fragment_first_step_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_first_step_name_marginTop"
            android:hint="@string/name_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_first_step_marginLeft"
            android:layout_marginTop="@dimen/fragment_first_step_marginTop"
            android:text="@string/age_text"
            android:textSize="@dimen/fragment_first_step_gender_textSize"/>

        <EditText
            android:id="@+id/missing_step1_age_editText"
            android:layout_width="@dimen/fragment_first_step_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_first_step_marginTop"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:maxLength="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_first_step_marginLeft"
            android:layout_marginTop="@dimen/fragment_first_step_marginTop"
            android:text="@string/gender_text"
            android:textSize="@dimen/fragment_first_step_gender_textSize"/>

        <RadioGroup
            android:id="@+id/missing_step1_gender_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_first_step_marginTop"
            android:layout_marginLeft="@dimen/fragment_first_step_marginLeft"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/missing_radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/missing_radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fragment_first_step_radioFemale_marginRight"
                android:text="@string/radio_female"/>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>

</ScrollView>
