<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColorGreen">

    <LinearLayout
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up_s"
            android:textColor="@color/ms_white"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sign_edges_left_and_right_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_box_white_36dp" />

            <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/username"
                android:textColor="@color/primary_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="@dimen/sign_edges_left_and_right_padding"
                android:maxLength="16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sign_edges_left_and_right_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_white_36dp" />

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/email"
                android:textColor="@color/primary_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="@dimen/sign_edges_left_and_right_padding"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sign_edges_left_and_right_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_white_36dp" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/password"
                android:textColor="@color/primary_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/sign_edges_left_and_right_padding" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_edges_top_and_bottom_padding"
            android:text="@string/sign_up"
            android:background="@drawable/shape"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/ms_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sign_edges_left_and_right_padding"
                android:layout_marginRight="@dimen/sign_edges_left_and_right_padding"
                android:text="@string/or"
                android:textStyle="bold"
                android:textColor="@color/ms_white"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/activityBackgroundColorWhite" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/sign_up_with"
            android:textStyle="bold"
            android:textColor="@color/ms_white"
            android:textAppearance="?android:textAppearanceMedium"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/google_signup_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/soical_margin"
                android:background="@color/activityBackgroundColorWhite"
                android:src="@drawable/google200" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/ms_white"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:id="@+id/go_to_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textColor="@color/ms_white"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
